kubernetes/apps/forgejo-system/forgejo/resources/http-route-external.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo-external
spec:
  hostnames:
    - git.mcf.io
  parentRefs:
    - name: external
      namespace: ingress-system
  rules:
    - backendRefs:
        - name: forgejo-http
          port: 3000
