kubernetes/apps/forgejo-system/forgejo/resources/tcp-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: forgejo-ssh
spec:
  parentRefs:
    - name: internal
      namespace: ingress-system
      sectionName: ssh
  rules:
    - backendRefs:
        - name: forgejo-ssh
          port: 22
